# ScrewRobotics

./: .gitignore  CMakeLists.txt  README.md  setup.py
cpp/screwrobotics/: CMakeLists.txt
cpp/screwrobotics/include/representations/: aliases.hpp  rotations.hpp  transformations.hpp
cpp/screwrobotics/include/robot/: robot.hpp
cpp/screwrobotics/src/: main.cpp
docs/: representations.md
include/rotations/: rotations.hpp
include/transformations/: transformations.hpp
python/screwrobotics/: __init__.py  representations.py  representations_2d.py  robot.py  traj_gen.py
screwrobotics/: representations.py  robot.py
src/: fk.py  main.cpp  representations.py  representations_2d.py  robot.py
